Fix block property not displayed in EMI